# apple-mail-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  apple_mail_mcp.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-17-v1.3-search-accuracy-overhaul.md
tests/: test_merge.py  test_parse_rows.py  test_refs.py  test_sanitize.py  test_script_builder.py
