[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "apple-mail-mcp"
version = "1.3.0"
description = "Read-only Apple Mail MCP server — AppleScript-based, stdio transport, no network"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["mcp==1.26.0", "pydantic==2.12.5"]

[project.scripts]
apple-mail-mcp = "apple_mail_mcp:main"

[tool.setuptools]
py-modules = ["apple_mail_mcp"]
